--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ play {
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-play.crypto.secret="y]Z5;`T0=F3mAda1lW[r5jFWCw9stMiBnShjPU;59l7cwA9LX1abrprOgTP/VCDQ"
+play.crypto.secret="7V^/oT:;FAneSFEeinQjANkhijpLTS[iloLB1CXQm/F8P4P]gW0`]pNzIIN^E1EY"
 
 # The application languages
 # ~~~~~
