--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -1,4 +1,13 @@
 include "application.conf"
 
-db.default.driver=org.postgresql.Driver
-db.default.url=""
+db.default {
+  driver = org.postgresql.Driver
+  url = $DATABASE_URL
+}
+
+http.port=$PORT
+
+play{
+  version=2.5.14
+  evolutions.db.default.autoApply=true
+}
