intial heroku upload

--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -2,10 +2,10 @@ include "application.conf"
 
 db.default {
   driver = org.postgresql.Driver
-  url = $DATABASE_URL
+  url = ${?DATABASE_URL}
 }
 
-http.port=$PORT
+http.port= ${?PORT}
 
 play{
   version=2.5.14
