--- a/conf/prod.conf
+++ b/conf/prod.conf
@@ -1,13 +1,6 @@
 include "application.conf"
 
-db.default {
-  driver = org.postgresql.Driver
-  url = ${?DATABASE_URL}
-}
+include "application.conf"
 
-http.port= ${?PORT}
-
-play{
-  version=2.5.14
-  evolutions.db.default.autoApply=true
-}
+db.default.driver=org.postgresql.Driver
+db.default.url=""
