initial heroku upload

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-include "dev.conf"
+include "private.conf"
 # This is the main configuration file for the application.
 # ~~~~~
 
@@ -16,7 +16,7 @@ play {
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-play.crypto.secret="7V^/oT:;FAneSFEeinQjANkhijpLTS[iloLB1CXQm/F8P4P]gW0`]pNzIIN^E1EY"
+
 
 # The application languages
 # ~~~~~
