--- a/conf/play-authenticate/smtp.conf
+++ b/conf/play-authenticate/smtp.conf
@@ -23,5 +23,5 @@ play.mailer {
     # authentication password
     # Optional, comment this line to leave password blank
     # defaults to no password
-    password="Celticwestham1"
+    password="celticwestham1"
 }
