--- a/conf/play-authenticate/mine.conf
+++ b/conf/play-authenticate/mine.conf
@@ -23,7 +23,7 @@ play-authenticate {
                 email="you@gmail.com"
 
                 # Mailing name
-                name=Play Authenticate
+                name=Coach Monitor
             }
             # Pause between email jobs (in seconds)
             delay=1
